--- a/index.html
+++ b/index.html
@@ -8,35 +8,64 @@
     <title>Instagram</title>
 </head>
 <body>
-    <div class="instagram-wrapper">
-        <div class="instagram-phone">
-            <img src="./images/instagram-smartphone-login.png" alt="celular">
-        </div>
-        <div class="instagram-continue">
-            <div class="group">
-                <img src="./images/instagram-logo.png" class="instagram-logo" alt="instagram logo">
-                <div class="profile-photo">
-                    <img src="./images/perfil-instagram.jpg" alt="foto de perfil">
+    <section>
+        <div class="instagram-wrapper">
+            <div class="instagram-phone">
+                <img src="./images/instagram-smartphone-login.png" alt="celular">
+            </div>
+            <div class="instagram-continue">
+                <div class="group">
+                    <img src="./images/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+                    <div class="profile-photo">
+                        <img src="./images/perfil-instagram.jpg" alt="foto de perfil">
+                    </div>
+                    <a href="#" class="instagram-login">Continue como Milton Neto</a>
+                    <a href="#" class="instagram-logout">Remover conta</a>
                 </div>
-                <a href="#" class="instagram-login">Continue como Milton Neto</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
-            </div>
-            <div class="group">
-            <p class="not-account">Não é Milton Neto?</p>
-            <p class="notaccount">
-                <span class="link-blue">Alternar contas</span>
-                ou
-                <span class="link-blue">Inscreva-se</span>
-            </p>
-            </div>
-            <div class="get-the-app">
-                <p class="get-app">Baixe o aplicativo</p>
-                <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+                <div class="group">
+                    <p class="not-account">Não é Milton Neto?</p>
+                    <p class="notaccount">
+                        <span class="link-blue">Alternar contas</span>
+                        ou
+                        <span class="link-blue">Inscreva-se</span>
+                    </p>
+                </div>
+                <div class="get-the-app">
+                    <p class="get-app">Baixe o aplicativo</p>
+                    <div class="download">
+                        <a href="#" class="app-download"></a>
+                        <a href="#" class="app-download"></a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <footer>
+        <div class="links-uteis">
+            <a href="#" class="links-uteis-itens">Meta</a>
+            <a href="#" class="links-uteis-itens">Sobre</a>
+            <a href="#" class="links-uteis-itens">Blog</a>
+            <a href="#" class="links-uteis-itens">Carreiras</a>
+            <a href="#" class="links-uteis-itens">Ajuda</a>
+            <a href="#" class="links-uteis-itens">API</a>
+            <a href="#" class="links-uteis-itens">Privacidade</a>
+            <a href="#" class="links-uteis-itens">Termos</a>
+            <a href="#" class="links-uteis-itens">Principais contas</a>
+            <a href="#" class="links-uteis-itens">Hashtags</a>
+            <a href="#" class="links-uteis-itens">Localizações</a>
+            <a href="#" class="links-uteis-itens">Instagram Lite</a>
+            <a href="#" class="links-uteis-itens">Carregamento de contatos e não usuários</a>
+            <a href="#" class="links-uteis-itens">Dança</a>
+            <a href="#" class="links-uteis-itens">Comida e bebida</a>
+            <a href="#" class="links-uteis-itens">Casa e Jardim</a>
+            <a href="#" class="links-uteis-itens">Música</a>
+            <a href="#" class="links-uteis-itens">Artes visuais</a>
+        </div>
+
+        <div class="links-uteis">
+            <span class="rodape">Português (Brasil)</span>
+            <span class="rodape">&copy; 2022 Instagram from Meta</span>
+        </div>
+    </footer>
 </body>
 </html>
